--- a/style.individual.css
+++ b/style.individual.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #000;
+    background-image:url(back.jpg);
     color: #fff;
     font-family: "Arial", sans-serif;
 }
